--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -16,7 +16,8 @@
     process, a set of bad behaviors (which we refer to as anomalies) to test for
     must be identified.  This can be accomplished either manually or by
     examining applications running in the target environment with existing
-    tools.  This work utilized the results of both NetCheck and CheckAPI, as
+    tools.  This work utilized the results of both
+    NetCheck\cite{Zhuang_NSDI_2014} and CheckAPI\cite{rasley2015detecting}, as
     well as manual analysis, to develop the set of anomalies used in our
     evaluation.  NetCheck readily able to identify a wide variety of anomalous
     behaviors related to network communication between one or more
@@ -24,11 +25,11 @@
     implementation to a reference model.''
 
     Another source of anomalies is the public bug trackers of projects available
-    on the web.  The presence of a bug can be defined as a series of system
+    on the web.  If the presence of a bug can be defined as a series of system
     calls then a model that identifies during execution can be constructed. This
     is ideal when determining whether or not an application is vulnerable to a
     widely publicized bug.  Similarly, bugs can be taken from similar projects
-    in order to expand a project's ``test suite.''
+    in order to expand a project's set of available anomalies.
 
     Once an anomaly has been identified, it is distilled into the sequence of
     system calls that ``implement'' the anomalous behavior.  This process
@@ -44,11 +45,11 @@
     to a ``checker'' that determines whether an application has performed a
     required set of actions. When a ``checker'' is required, the sequence of
     system calls is encoded as a computational model that, when provided with as
-    input the system calls made during the course of an execution, can decide
-    whether or the series of system calls is present.  If the analysis reveals
-    that anomalous conditions need to be injected into a replay execution this
-    is facilitated by modifying the to-be-replayed system call trace from the
-    application under test.
+    input the system calls made during the course of a replay execution, can
+    decide whether or the series of system calls is present.  If the analysis
+    reveals that anomalous conditions need to be injected into a replay
+    execution this is facilitated by modifying the to-be-replayed system call
+    trace from the application under test.
 
     In some cases, only one of these pieces is required for CrashSimulator to
     perform its analysis.  If there is not a definite correct response system
@@ -81,7 +82,7 @@
     process and interceeding in its execution at approprate times in order to
     simulate the results and side effects of any system calls the application
     makes.  Because the system call trace being replayed has been mutated to
-    reflect the chosen anomalies, exposes the applications to those
+    reflect the chosen anomalies, this process exposes the application to those
     anomalies. After the replayed execution concludes, CrashSimulator able to
     use the ending state of its checkers to report whether or not anomalous
     behavior was present.  The up front effort in this process only needs to be
@@ -117,12 +118,12 @@
     When CrashSimulator injects anomalous behavior into a replay execution it is
     done with the intention that the application under test deal with this
     anomaly in some way. For example, if CrashSimulator modifies the data
-    structure returned by a call to {\tt stat64()} such that the target file
+    structure returned by a call to {\tt stat()} such that the target file
     appears to be a symlink rather than a regular file, the application should
     take some action to deal with this fact.  There are numerous ways an
     application could correctly handle a given anomaly so CrashSimulator must
     generically accept all of them.  The ``default checker'' handles this by
-    making the assumption that an applications efforts to deal with the anomaly
+    making the assumption that an application's efforts to deal with the anomaly
     will result in it executing different program paths (and threfore different
     system calls) than were executed when the system call trace being replayed
     was recorded.  Based on this, if the application being replayed does not
@@ -143,16 +144,16 @@
 
     \paragraph{More Specific Checkers}
 
-    CrashSimulator also accepts more specific checkers that evaluate wether or
+    CrashSimulator also accepts more specific checkers that evaluate whether or
     not an application has performed a required operation.  These checkers
     monitor a replay execution for a specific system call sequence (with the
     correct parameters, return values, and state modifications) that indicates
     the application has carried out the operation in question.  To achieve this
     these checkers contain a computational model (e.g. a deterministic finite
-    automaton, a push down automaton, etc.) that encodes and accepts the
-    system call sequence it has been constructed to watch for.  Whether
-    CrashSimulator ultimately accepts a given replay execution is determined by
-    the ending states of the checkers monitoring the execution.
+    automaton, a push down automaton, etc.) that encodes and accepts the system
+    call sequence it has been constructed to watch for.  Whether CrashSimulator
+    ultimately accepts a given replay execution is determined by the ending
+    states of the checkers monitoring the execution.
 
 
     \subsection{Architecture}
@@ -173,18 +174,16 @@
     %CrashSimulator's first module operates by using this model to analyzed the system call behavior of the application
     %under test(e.g. order, parameters, side effects, return values).
         
-    CrashSimulator's makes use of the Ptrace facilities built into modern
+    CrashSimulator's makes use of the {\tt ptrace} facilities built into modern
     versions of the Linux kernel. The aforementioned ``replay'' of a system call
-    trace is achieved by intercepting every system call the application makes,
-    preventing the actual system call from being carried out by the kernel
-    (i.e. no-oping out the real system call by replacing it with a call to
-    getpid()), identifying the matching system call from the previously recorded
-    trace, and replicating the return value and side effects such that the
-    application believes that the system call it made actually took place. We
-    have found that emulating the post conditions of the system calls an
-    application makes results in faithful replay of a previous execution in most
-    cases.
-
+    trace is achieved by intercepting key system calls made by the application,
+    preventing the actual system call from being carried out by the kernel (by
+    converting it to a call to {\tt getpid()}), identifying the matching system
+    call from the previously recorded trace, and replicating the return value
+    and side effects such that the application believes that the system call it
+    made actually took place. We have found that emulating the post conditions
+    of the system calls an application makes results in faithful replay of a
+    previous execution in most cases.
 
     CrashSimulator is fully self contained and operates without user
     intervention during its analysis process. At this point, CrashSimulator
@@ -224,14 +223,14 @@
         pause execution before and after each system call an application makes
         in order to manage execution and inject anomalies where appropriate.
 
-        This CrashSimulator also relies on system call traces recorded using
-        strace.  The strace system call trace format is extensive and captures
-        the parameters, return values, and side effects of each system call an
-        application makes.  Such a record provides CrashSimulator with all the
-        information needed to direct execution of the application in such a way
-        that the contents of the system call trace are faithfully replayed.  It
-        is in this way that system call traces act as an interface over an
-        applications execution that used to inject anomalous behavior.
+        CrashSimulator also relies on system call traces recorded using {\tt
+          strace}.  The {\tt strace} system call trace format is extensive and
+        captures the parameters, return values, and side effects of each system
+        call an application makes.  Such a record provides CrashSimulator with
+        all the information needed to direct execution of the application in
+        such a way that the contents of the system call trace are faithfully
+        replayed.  It is in this way that system call traces act as an interface
+        over an applications execution that used to inject anomalous behavior.
 
         \paragraph{Removal of language dependence}
 
@@ -244,8 +243,8 @@
         paths in an application.  This work is concerned with issues that arise
         at the ``interfaces'' between an application and its environment.
         Manipulating system calls allows us to skip the process of generating
-        these crafted inputs to this end in favor of directly effecting the
-        behavior we are interested in.
+        these crafted inputs in favor of directly effecting the behavior we are
+        interested in.
 
         \paragraph{Identify Issues that Result from an Application's Environment}
 
